New script to maintain public/private files on the filesystem
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@810 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556